--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -490,7 +490,8 @@ section {
 
 .job .content {
   margin-top: 60px;
-  margin-left: 20px;
+  margin-right: 30px;
+  padding-right: 40px ;
 }
 
 .job .content h3 {
@@ -526,6 +527,57 @@ section {
   margin-left: 0px;
   margin-top: 60px;
 }
+
+/*--------------------------------------------------------------
+# Full Time Part Time
+--------------------------------------------------------------*/
+
+.fullpart {
+  margin-top: 60px;
+  margin-bottom: 60px;
+  background-color: #fff;
+}
+
+.fullpart .content {
+  margin-top: 50px;
+  margin-right: 0px;
+  padding-right: 0px ;
+}
+
+.fullpart .content h3 {
+  font-weight: 400;
+  font-size: 28px;
+}
+
+.fullpart .content p {
+  font-weight: 200;
+  font-size: 14px;
+}
+
+.fullpart .content ul {
+  list-style: none;
+  padding: 0;
+}
+
+.fullpart .content ul li {
+  padding-bottom: 10px;
+}
+
+.fullpart .content ul i {
+  font-size: 20px;
+  padding-right: 4px;
+  color: #cc1616;
+}
+
+.fullpart .content p:last-child {
+  margin-bottom: 0;
+}
+
+.fullpart .maps {
+  margin-left: 0px;
+  margin-top: 60px;
+}
+
 
 /*--------------------------------------------------------------
 # General
@@ -595,6 +647,44 @@ section {
 .cta .cta-btn:hover {
   background: #cc1616;
   border: 2px solid #cc1616;
+}
+
+/*--------------------------------------------------------------
+# wfh
+--------------------------------------------------------------*/
+.wfh{
+  /*height: 500px;*/
+  padding: 0 0 0 0;
+  margin-bottom: 50px;
+}
+
+.wfh .content {
+  padding-right: 30px;
+  background-color: #FD8D3C;
+}
+
+.wfh .content h3 {
+  font-weight: 600;
+  font-size: 26px;
+}
+
+.wfh .content ul {
+  list-style: none;
+  padding: 0;
+}
+
+.wfh .content ul li {
+  padding-bottom: 10px;
+}
+
+.wfh .content ul i {
+  font-size: 20px;
+  padding-right: 4px;
+  color: #cc1616;
+}
+
+.wfh .content p:last-child {
+  margin-bottom: 0;
 }
 
 /*--------------------------------------------------------------
@@ -751,7 +841,7 @@ section {
 # tools
 --------------------------------------------------------------*/
 .tools{
-  height: 500px;
+  /*height: 500px;*/
   padding: 0 0 0 0;
   margin-bottom: 50px;
 }
