--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -357,13 +357,14 @@ h6 {
   display: inline-block;
   padding: 10px 30px;
   transition: 0.5s;
-  border: 2px solid #fff;
+  border: 2px solid #FD8D3C;
+  background: #FD8D3C;
   color: #fff;
 }
 
 #hero .btn-get-started:hover {
-  background: #FD8D3C;
-  border-color: #FD8D3C;
+  background: #AD343E;
+  border-color: #AD343E;
   color: #fff;
   opacity: 1;
 }
@@ -488,6 +489,10 @@ section {
 # Job
 --------------------------------------------------------------*/
 
+.job{
+  padding-bottom: 30px;
+}
+
 .job .content {
   margin-top: 60px;
   margin-right: 30px;
@@ -533,9 +538,10 @@ section {
 --------------------------------------------------------------*/
 
 .fullpart {
-  margin-top: 60px;
+  margin-top: 0px;
   margin-bottom: 60px;
   background-color: #fff;
+  padding-top: 0px;
 }
 
 .fullpart .content {
@@ -547,11 +553,21 @@ section {
 .fullpart .content h3 {
   font-weight: 400;
   font-size: 28px;
+  text-align: right;
 }
 
 .fullpart .content p {
   font-weight: 200;
   font-size: 14px;
+  text-align: right;
+}
+
+.fullpart .content2 p {
+  font-weight: 200;
+  font-size: 14px;
+  text-align: justify;
+  margin-top: 30px;
+  margin-bottom: 5px;
 }
 
 .fullpart .content ul {
@@ -578,6 +594,26 @@ section {
   margin-top: 60px;
 }
 
+#fullpart .btn-get-started {
+  font-family: "Varela Round", sans-serif;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 14px;
+  opacity: 0.75;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 10px 30px;
+  transition: 0.5s;
+  border: 2px solid #fff;
+  color: #fff;
+}
+
+#fullpart .btn-get-started:hover {
+  background: #FD8D3C;
+  border-color: #FD8D3C;
+  color: #fff;
+  opacity: 1;
+}
 
 /*--------------------------------------------------------------
 # General
